// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList renders with items 1`] = `
<DocumentFragment>
  <section
    class="itemList"
    id="item-list"
  >
    <ul>
      <li>
        <a
          href="/item/undefined"
          style="color: darkgreen;"
        >
          <h4 />
        </a>
      </li>
      <li>
        <a
          href="/item/undefined"
          style="color: darkgreen;"
        >
          <h4 />
        </a>
      </li>
      <li>
        <a
          href="/item/undefined"
          style="color: darkgreen;"
        >
          <h4 />
        </a>
      </li>
    </ul>
  </section>
</DocumentFragment>
`;

exports[`ItemList renders without items 1`] = `
<DocumentFragment>
  <section
    class="itemList"
    id="item-list"
  >
    <ul />
  </section>
</DocumentFragment>
`;
